--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,7 +19,7 @@ username=Yamini
 password=P@dma123
 app.message=Reading this message
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/multiplex
+spring.datasource.url=jdbc:postgresql://localhost:5432/sprint2
 spring.datasource.username=postgres
 spring.datasource.password=P@dma123
 #spring.datasource.driver-class-name=org.postgresql.Driver
